2004-10-11  Sam Steingold  <sds@gnu.org>

	* misc.d (MODULE-INFO): return the DLL information for :FFI
	argument (instead of 0); all info when VERBOSE, names only otherwise
	* constsym (:FII) [DYNAMIC_FFI & (WIN32_NATIVE | HAVE_DLOPEN)]: added
	Suggested by Jörg Höhle

2004-10-10  Bruno Haible  <bruno@clisp.org>

	* control.d (parse_doc_decl): Fix GC-safety bug introduced on
	2004-05-27.
	* hashtabl.d (warn_forced_gc_rehash): Fix GC-safety bug introduced on
	2004-05-15.
	(warn_key_forces_gc_rehash): Fix GC-safety bug introduced on
	2004-05-12.

2004-10-10  Bruno Haible  <bruno@clisp.org>

	* .gdbinit: Don't always execute the "base" command. It made it
	impossible to attach to an already running lisp.run process.

2004-10-10  Bruno Haible  <bruno@clisp.org>

	Fix GC crash after a GC was triggered while a break loop was active.
	* lispbibl.d (bt_beyond_stack_p, with_saved_back_trace): Correctly
	parenthesize argument expressions.
	* debug.d (driver, break_driver): Initialize bt_next to back_trace,
	not NULL. Otherwise the bt_caller fields are not updated during GCs,
	and after the function is left the next GC crashes. Fixes bug
	introduced on 2002-11-15.

2004-10-09  Bruno Haible  <bruno@clisp.org>

	* clos-class3.lisp (reinitialize-instance-<class>): Don't force a
	class to be unfinalized if finalization already succeeded.

2004-10-09  Bruno Haible  <bruno@clisp.org>

	* clos-slots2.lisp (slot-unbound): Restore the error message that was
	thrown away on 2003-05-01.

2004-10-08  Jörg Höhle  <hoehle@users.sourceforge.net>

	Usable control of sharing of FFI pointer validity (aka extent)
	* foreign.d (set_foreign_pointer): fix GC-safety bug; allow both
	entities to be foreign objects other than just foreign-pointer;
	return initial (modified) entity, which is incompatible with SETF
	requirements, but very handy.
	* foreign1.lisp (SETF FOREIGN-POINTER): remove
	(SET-FOREIGN-POINTER): export

2004-10-07  Bruno Haible  <bruno@clisp.org>
